# psd-plan

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
Documentation/: APIContract.md  Backend_Componants_Design.md  Backend_Design_Justifications.md  Design.md  Discussion_log.md  MilestoneTwo-TaskSheet.md  ProjectPlan.md  Requirements.md  RiskRegister.md  TaskBoard.md  TechnologyOptions.md  TestPlan.md  TraceabilityMatrix.md
Documentation/Code_Review_work/: Code-Review.docx  Code_Review_Note.docx
Documentation/Diagrams/: AppFlow_CurrentProduct.drawio  Sequence_CurrentProduct.drawio
Documentation/MilestoneOne-Design/: Graphical_UI_system.docx  PDF_ingestion_flowchart.docx  prototype_scope.md  technology_options.md
Tooling/: run_backend.sh  run_tests.sh
data/parsed/: papers.jsonl
src/: app.py  credibility_service.py  dataset_service.py  graph_service.py  pdf_parser.py  query_service.py  reference_extractor.py  relationship_service.py  repository.py  timeline_service.py
src/backend/: app.py  auth_scaffold.py  credibility_service.py  dataset_service.py  graph_service.py  keyword_extractor.py  metadata_extractor.py  models.py  pdf_parser.py  query_service.py  relationship_service.py  repository.py  timeline_service.py  topic_extractor.py
src/corehub.egg-info/: SOURCES.txt  requires.txt
tests/: test_api_contract.py  test_dataset_service.py  test_repository_config.py  test_services.py
tmp/: gitlab-workitems.txt
